// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VotesFilter should render 1`] = `
<DocumentFragment>
  <div
    data-testid="VotesFilter"
  >
    <div
      class="relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <div
          class="group"
        >
          <button
            class="ControlButton__ControlButtonStyled-sc-1xp1l1a-0 gPBHgx group"
          >
            <div
              class="absolute inset-0 -mx-0.5 rounded ring-theme-primary-400 group-focus:ring-2 group-focus-visible"
            />
            <div
              class="flex items-center justify-center w-5 h-5"
            >
              <div
                class="sc-bdfBwQ eBdiJn"
                height="19"
                width="17"
              >
                <svg>
                  filters.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VotesFilter should render default 1`] = `
<DocumentFragment>
  <div
    data-testid="VotesFilter"
  >
    <div
      class="relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <div
          class="group"
        >
          <button
            class="ControlButton__ControlButtonStyled-sc-1xp1l1a-0 gPBHgx group"
          >
            <div
              class="absolute inset-0 -mx-0.5 rounded ring-theme-primary-400 group-focus:ring-2 group-focus-visible"
            />
            <div
              class="flex items-center justify-center w-5 h-5"
            >
              <div
                class="sc-bdfBwQ eBdiJn"
                height="19"
                width="17"
              >
                <svg>
                  filters.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
      </span>
      <div
        class="Dropdown__Wrapper-ocz1je-0 krLubM opacity-0 mt-3 py-3 absolute z-10 bg-theme-background rounded-xl shadow-xl shadow-votes-filter"
        data-testid="dropdown__content"
        style="opacity: 1; height: -30px; overflow-y: scroll;"
      >
        <div>
          <div
            class="w-56 flex flex-col items-start space-y-5 px-10 py-7 text-theme-secondary-700 dark:text-theme-secondary-200"
          >
            <label
              class="h-5 flex items-center space-x-3 rounded-md cursor-pointer"
              data-testid="VotesFilter__option--all"
            >
              <input
                checked=""
                class="Checkbox-sc-17gwqiq-0 gDXYgb"
                color="success"
                name="all"
                type="checkbox"
              />
              <span
                class="text-base font-medium"
              >
                All
              </span>
            </label>
            <label
              class="h-5 flex items-center space-x-3 rounded-md cursor-pointer"
              data-testid="VotesFilter__option--current"
            >
              <input
                class="Checkbox-sc-17gwqiq-0 gDXYgb"
                color="success"
                name="current"
                type="checkbox"
              />
              <span
                class="text-base font-medium"
              >
                Current Votes
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VotesFilter should render with current option selected 1`] = `
<DocumentFragment>
  <div
    data-testid="VotesFilter"
  >
    <div
      class="relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <div
          class="group"
        >
          <button
            class="ControlButton__ControlButtonStyled-sc-1xp1l1a-0 gPBHgx group"
          >
            <div
              class="flex absolute right-0 justify-center items-center -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background mr-1"
            >
              <div
                class="w-2 h-2 rounded-full bg-theme-primary-500"
              />
            </div>
            <div
              class="absolute inset-0 -mx-0.5 rounded ring-theme-primary-400 group-focus:ring-2 group-focus-visible"
            />
            <div
              class="flex items-center justify-center w-5 h-5"
            >
              <div
                class="sc-bdfBwQ eBdiJn"
                height="19"
                width="17"
              >
                <svg>
                  filters.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
      </span>
      <div
        class="Dropdown__Wrapper-ocz1je-0 krLubM opacity-0 mt-3 py-3 absolute z-10 bg-theme-background rounded-xl shadow-xl shadow-votes-filter"
        data-testid="dropdown__content"
        style="opacity: 1; height: -30px; overflow-y: scroll;"
      >
        <div>
          <div
            class="w-56 flex flex-col items-start space-y-5 px-10 py-7 text-theme-secondary-700 dark:text-theme-secondary-200"
          >
            <label
              class="h-5 flex items-center space-x-3 rounded-md cursor-pointer"
              data-testid="VotesFilter__option--all"
            >
              <input
                class="Checkbox-sc-17gwqiq-0 gDXYgb"
                color="success"
                name="all"
                type="checkbox"
              />
              <span
                class="text-base font-medium"
              >
                All
              </span>
            </label>
            <label
              class="h-5 flex items-center space-x-3 rounded-md cursor-pointer"
              data-testid="VotesFilter__option--current"
            >
              <input
                checked=""
                class="Checkbox-sc-17gwqiq-0 gDXYgb"
                color="success"
                name="current"
                type="checkbox"
              />
              <span
                class="text-base font-medium"
              >
                Current Votes
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VotesFilter should render with disabled current option 1`] = `
<DocumentFragment>
  <div
    data-testid="VotesFilter"
  >
    <div
      class="relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <div
          class="group"
        >
          <button
            class="ControlButton__ControlButtonStyled-sc-1xp1l1a-0 gPBHgx group"
          >
            <div
              class="absolute inset-0 -mx-0.5 rounded ring-theme-primary-400 group-focus:ring-2 group-focus-visible"
            />
            <div
              class="flex items-center justify-center w-5 h-5"
            >
              <div
                class="sc-bdfBwQ eBdiJn"
                height="19"
                width="17"
              >
                <svg>
                  filters.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
      </span>
      <div
        class="Dropdown__Wrapper-ocz1je-0 krLubM opacity-0 mt-3 py-3 absolute z-10 bg-theme-background rounded-xl shadow-xl shadow-votes-filter"
        data-testid="dropdown__content"
        style="opacity: 1; height: -30px; overflow-y: scroll;"
      >
        <div>
          <div
            class="w-56 flex flex-col items-start space-y-5 px-10 py-7 text-theme-secondary-700 dark:text-theme-secondary-200"
          >
            <label
              class="h-5 flex items-center space-x-3 rounded-md cursor-pointer"
              data-testid="VotesFilter__option--all"
            >
              <input
                checked=""
                class="Checkbox-sc-17gwqiq-0 gDXYgb"
                color="success"
                name="all"
                type="checkbox"
              />
              <span
                class="text-base font-medium"
              >
                All
              </span>
            </label>
            <label
              class="h-5 flex items-center space-x-3 rounded-md text-theme-secondary-500 dark:text-theme-secondary-700"
              data-testid="VotesFilter__option--current"
            >
              <input
                class="Checkbox-sc-17gwqiq-0 gDXYgb"
                color="success"
                disabled=""
                name="current"
                type="checkbox"
              />
              <span
                class="text-base font-medium"
              >
                Current Votes
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
